# ps-lite-new

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt
examples/LR/: CMakeLists.txt
examples/LR/include/: data_iter.h  lr.h
examples/LR/script/: lr_mpi.py
examples/LR/src/: lr.cc  main.cc
examples/LR_proximal/: CMakeLists.txt
examples/LR_proximal/include/: data_reader.h  lr.h  prox_l1.h  prox_l2.h  softmax.h  util.h
examples/LR_proximal/main/: lr_prox.cc  main.cc  softmax_prox.cc  test_LR.cc  test_reader.cc  test_softmax.cc  test_util.cc
examples/LR_proximal/script/: data_split.py  eval.sh  gen_data.py  hostfile1  lr_mpi.py  lreval_mpi.py  serverhost1  softmax_mpi.py  workerhost1
examples/LR_proximal/src/: lr.cc  softmax.cc
examples/test/: CMakeLists.txt  test_filelist.cc  test_handle.cc  test_launch.cc  test_stale.cc
examples/test_eigen/: CMakeLists.txt  test_eigen.cc
include/ps/: kv_app.h
include/ps/internal/: message.h
src/: meta.proto  van.cc
tests/: test_launch.cc
tracker/: dmlc_mpi.py  lr_mpi.py
