project(pslite)

macro(add_all_subdirectories retval curdir)
    file(GLOB sub-dir RELATIVE ${curdir} *)
    set(list_of_dirs "")
    foreach(dir ${sub-dir})
        if(IS_DIRECTORY ${curdir}/${dir})
            STRING(SUBSTRING ${dir} 0 1 firstchar)
            if(${firstchar} STREQUAL "." OR ${firstchar} STREQUAL "_" OR ${dir} STREQUAL "CMakeFiles")
            else(${firstchar} STREQUAL "." OR ${firstchar} STREQUAL "_" OR ${dir} STREQUAL "CMakeFiles")
                set(list_of_dirs ${list_of_dirs} ${dir})
                message(STATUS "Detected example: " ${dir})
                add_subdirectory(${dir})
            endif()
        endif()
    endforeach()
    set(${retval} ${list_of_dirs})
endmacro()

add_all_subdirectories(retval, ${CMAKE_CURRENT_SOURCE_DIR})